--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -30,10 +30,15 @@
 
 #app {
   max-width: var(--app-container-max-width);
+  height: 100vh;
   margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
+
+body {
+  margin: 0;
+}
 
   @media (max-width: 767px) {
     max-width: var(--app-container-mobile-max-width);
